projects/compiler/test/typechecker/match/error_exhaustive_type.1.out
Error at %FILE_NAME%:4:3
Unreachable match case
  |    _ => 4
       ^
The previous case(s) cover all possibilities for match target type 'Int'
