projects/compiler/test/typechecker/match/error_exhaustive_type.2.abra
val a = Some(123)
val x = match a {
  Int a => a + 1
  None => 0
  _ => 4
}
